compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_private_type_leak_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 772
expression: "type PrivateType\n\n@external(erlang, \"a\", \"b\")\nfn go() -> PrivateType\n\npub fn leak_type() { go() }"
---
error: Private type used in public interface
  ┌─ /src/one/two.gleam:6:1
  │
6 │ pub fn leak_type() { go() }
  │ ^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.

